crates/compiler/src/tests/e2e/good/0373_closure_values_and_calls/main.gom
fn main() {
    let result = (|x| x + 1)(41);
    println(result.to_string());
}
