crates/compiler/src/tests/e2e/bad/0566_break_in_closure_inside_while/main.gom
fn main() {
    while true {
        let breaker = || {
            break
        };
        breaker();
        break;
    }
}
